--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
                 <a class="nav-link" href="{% url 'chart:covid_19_view' %}">COVID 19</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="{% url 'chart:ticket_class_view_1' %}" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Titanic
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
